--- a/app/views/stations/edit.erb
+++ b/app/views/stations/edit.erb
@@ -8,6 +8,6 @@
   Enter New Dock Count: <input type='text' name='station[dock_count]'/><br><br><br>
   <h3>Current Date of Installation: <%=@station.installation_date.strftime("%m/%d/%Y")%></h3>
   Enter New Installation Date: <input type='text' name='station[installation_date]'/><br><br><br>
-  <input type='submit' value='Save Changes'/><br>
+  <input type='submit' value='Save Changes'/><br><br>
   <a href="/stations/<%=@station.id%>">Back to Station</a>
 </form>
