add edit button, edit funtion just creates a new station

--- a/app/views/stations/index.erb
+++ b/app/views/stations/index.erb
@@ -4,5 +4,5 @@
   <h3><a href="/stations/<%=station.id%>"><%= station.name %></a></h3>
   <p><%= station.city %></p>
   <a href="/stations/<%=station.id%>/edit">Edit</a>
-  <a href="/stations/<%=station.id%>">Delete</a>
+  <a href="/stations">Delete</a>
 <% end %>
