--- a/app/views/stations/index.erb
+++ b/app/views/stations/index.erb
@@ -3,11 +3,10 @@
 <% @stations.each do |station| %>
   <h3><a href="/stations/<%=station.id%>"><%= station.name %></a></h3>
   <p><%= station.city %></p>
-  <form class="" action="/stations/<%= station.id %>/edit" method="put">
-    <input type="submit" name="_method" value="Edit">
+  <form class="" action="/stations/<%= station.id %>/edit" method="GET">
+    <input type="submit" value="Edit">
   </form>
   <form action="/stations/<%= station.id %>" method="POST">
-    <input type="hidden" name="_method" value="DELETE">
-    <input type="submit" value="Delete" />
+    <input type="submit" name="_method" value="Delete" />
   </form>
 <% end %>
