--- a/app/views/stations/edit.erb
+++ b/app/views/stations/edit.erb
@@ -1,4 +1,4 @@
-<form action="/stations/<%=@station.id%>" method="POST">
+cd <form action="/stations/<%=@station.id%>" method="POST">
   <h1>Edit Station Details </h1>
   Enter New Station Name: <input type='text' name='station[name]' value="<%=@station.name%>"/><br><br><br>
   Enter New City: <input type='text' name='station[city]' value="<%=@station.city%>"/><br><br><br>
