add new and edit to trip views; add edit, new, create, update, delete to controller

--- a/app/views/trips/show.erb
+++ b/app/views/trips/show.erb
@@ -1,12 +1,13 @@
 <a href='/trips'>Back to All Trips</a>
 <h1>Viewing Trip: <%=@trip.id%></h1>
-  <p>Duration: <%= @trip.duration%></p>
+  <p>Duration in Minutes: <%= @trip.calculate_duration%></p>
   <p>Start Date: <%= @trip.start_date%></p>
-  <p>Starting Station: <%= @trip.station.name%></p>
-  <p>Ending Station: <%= @trip.station.name%></p>
-
-  <p>City: <%= @trip.city%></p>
-  <p>Date Installed: <%= @trip.installation_date%></p>
+  <p>Starting Station: <%= @trip.starting_station_name%></p>
+  <p>End Date: <%= @trip.end_date%></p>
+  <p>Ending Station: <%= @trip.ending_station_name%></p>
+  <p>Bike Used: <%= @trip.bike_id%></p>
+  <p>Subcription Type: <%= @trip.subscription_type%></p>
+  <p>Zip Code: <%= @trip.zip_code%></p>
   <form class="" action="/trips/<%= @trip.id %>/edit" method="GET">
     <input type="submit" name="_method" value="Edit">
   </form>
