--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,3 +1,19 @@
-<h1>Bike Share</h1>
+<head>
+  <link rel='stylesheet' href='/stylesheets/main.css'>
+</head>
 
-<a href="/stations">List of Stations</a>
+<body>
+  <ul class='nav-bar'>
+    <li class='nav-bar-item'><a href="/stations">stations</a></li>
+    <li class='nav-bar-item'><a href="/trips">trips</a></li>
+    <li class='nav-bar-item'><a href="/conditions">weather conditions</a></li>
+  </ul>
+
+  <main>
+    <h1>bike share</h1>
+  </main>
+
+  <img class="main-img" src="/images/pexels-photo-248762.jpeg" alt="bike lane street logo">
+  
+</body>
+<!-- <a href="/stations">List of Stations</a> -->
