fixed a couple typo errors

--- a/app/views/conditions/show.erb
+++ b/app/views/conditions/show.erb
@@ -1,5 +1,5 @@
 <a href='/conditions'>Back to All Trip Conditions</a>
-<h1>Viewing Trip Date: <%=@condition.date%></h1>
+<h1>Viewing Weather for: <%=@condition.date%></h1>
   <p>High Temperature: <%= @condition.max_temperature%></p>
   <p>Mean Temperature: <%= @condition.mean_temperature%></p>
   <p>Low Temperature: <%= @condition.min_temperature%></p>
