--- a/app/views/conditions/new.erb
+++ b/app/views/conditions/new.erb
@@ -1,20 +1,20 @@
 <form action="/conditions" method="post">
-  <p>Enter new trip conditions:</p>
+  <p>Enter new conditions for this day:</p>
   <label>Date:</label>
-  <input type='text' name='station[date]'/><br/><br/>
+  <input type='text' name='condition[date]'/><br/><br/>
   <label>High Temperature:</label>
-  <input type='text' name='station[max_temperature]'/><br/><br/>
+  <input type='text' name='condition[max_temperature]'/><br/><br/>
   <label>Average Temperature:</label>
-  <input type='text' name='station[mean_temperature]'/><br/><br/>
+  <input type='text' name='condition[mean_temperature]'/><br/><br/>
   <label>Low Temperature:</label>
-  <input type='text' name='station[min_temperature]'/><br/><br/>
+  <input type='text' name='condition[min_temperature]'/><br/><br/>
   <label>Mean Humidity:</label>
-  <input type='text' name='station[mean_humidity]'/><br/><br/>
+  <input type='text' name='condition[mean_humidity]'/><br/><br/>
   <label>Mean Visibility (in miles):</label>
-  <input type='text' name='station[mean_visibility]'/><br/><br/>
+  <input type='text' name='condition[mean_visibility]'/><br/><br/>
   <label>Mean Wind Speed (in mph):</label>
-  <input type='text' name='station[mean_wind_speed]'/><br/><br/>
-  <label>Precipitation (in inches):</label>
-  <input type='text' name='station[precipitation]'/><br/><br/>
+  <input type='text' name='condition[mean_wind_speed]'/><br/><br/>
+  <label>Precipitation (in):</label>
+  <input type='text' name='condition[precipitation]'/><br/><br/>
   <input type='submit' value='Create Conditions'/>
 </form>
