add condition wind speed data to controller, update view

--- a/app/views/conditions/dashboard.erb
+++ b/app/views/conditions/dashboard.erb
@@ -1,11 +1,28 @@
 <h1>Conditions Dashboard</h1>
 
 <h3>Breakdown of Trips Taken Per Ten Degree Temperature Range</h3>
-  <%@conditions.collect_max_temp_ranges.each.with_index do |range, index|%><h6>Range: <%=range%></h6>
-  <%#@conditions.collect_descriptors_for_each_ten_degree_temp_range.each do |data| %>
+  <%@conditions.collect_max_temp_ranges.each.with_index do |range, index|%><h6>Range: <%=range%> degrees</h6>
   <ul>
     <li>Average Rides: <%=@condition_temp_data[index][0]%></li>
     <li>Maximum Rides: <%=@condition_temp_data[index][1]%></li>
     <li>Minimum Rides: <%=@condition_temp_data[index][2]%></li>
+  </ul>
+  <%end%>
+
+<h3>Breakdown of Trips Taken Per 0.5" of Rain</h3>
+  <%@conditions.collect_max_precipitation_ranges.each.with_index do |range, index|%><h6>Range: <%=range%> inches</h6>
+  <ul>
+    <li>Average Rides: <%=@condition_precip_data[index][0]%></li>
+    <li>Maximum Rides: <%=@condition_precip_data[index][1]%></li>
+    <li>Minimum Rides: <%=@condition_precip_data[index][2]%></li>
+  </ul>
+  <%end%>
+
+<h3>Breakdown of Trips Taken by 4 miles per hour of Wind Speed</h3>
+  <%@conditions.collect_max_wind_speed_range.each.with_index do |range, index|%><h6>Range: <%=range%> miles per hour</h6>
+  <ul>
+    <li>Average Rides: <%=@condition_wind_speed_data[index][0]%></li>
+    <li>Maximum Rides: <%=@condition_wind_speed_data[index][1]%></li>
+    <li>Minimum Rides: <%=@condition_wind_speed_data[index][2]%></li>
   </ul>
   <%end%>
