--- a/app/views/trips/dashboard.erb
+++ b/app/views/trips/dashboard.erb
@@ -28,3 +28,14 @@
     <li> Average Wind Speed: <%= @condition_with_most_rides.mean_wind_speed %> miles per hour</li>
     <li> Precipitatio: <%= @condition_with_most_rides.precipitation %> inches</li>
   </ul>
+
+  <h5> Weather Conditions for Day with Least Rides</h5>
+  <ul>
+    <li> Max Temperature: <%= @condition_with_least_rides.max_temperature %> degrees</li>
+    <li> Average Temperature: <%= @condition_with_least_rides.mean_temperature %> degrees</li>
+    <li> Min Temperature: <%= @condition_with_least_rides.min_temperature %> degrees</li>
+    <li> Average Humidity: <%= @condition_with_least_rides.mean_humidity %> %</li>
+    <li> Average Visibility: <%= @condition_with_least_rides.mean_visibility %> miles</li>
+    <li> Average Wind Speed: <%= @condition_with_least_rides.mean_wind_speed %> miles per hour</li>
+    <li> Precipitatio: <%= @condition_with_least_rides.precipitation %> inches</li>
+  </ul>
