add links in nav-bar to home & all dashboards

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,9 +4,13 @@
 
 <body>
   <ul class='nav-bar'>
+    <li class='nav-bar-item'><a href="/">home</a></li>
     <li class='nav-bar-item'><a href="/stations">stations</a></li>
     <li class='nav-bar-item'><a href="/trips">trips</a></li>
     <li class='nav-bar-item'><a href="/conditions">weather conditions</a></li>
+    <li class='nav-bar-item'><a href="/stations-dashboard">stations dashboard</a></li>
+    <li class='nav-bar-item'><a href="/trips-dashboard">trips dashboard</a></li>
+    <li class='nav-bar-item'><a href="/conditions-dashboard">weather dashboard</a></li>
   </ul>
 
   <%= yield %>
