--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -42,6 +42,44 @@ li a:hover {
     background-color: #FFFFFF;
 }
 
+.title {
+  margin-top: 8px;
+  margin-bottom: 12px;
+}
+
+.index-container {
+  display: inline;
+  height: 200px;
+  width: 200px;
+  justify-content: space-around;
+  margin: 18px 18px 18px 18px;
+  float: left;
+}
+article.index-item {
+  display: flex;
+  height: 200px;
+  width: 200px;
+  border: 2px solid;
+  border-radius: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 4px 4px 4px 4px;
+  padding: 5px;
+  flex-wrap: wrap;
+}
+
+article.index-item h3 {
+  display: flex;
+  align-items: center;
+}
+
+.index-item * {
+  padding: 0 0 0 0;
+  margin: 0 0 0 0;
+  align-content: center;
+}
+
 img.main-img {
   display: block;
   opacity: 0.4;
