--- a/app/views/stations/index.erb
+++ b/app/views/stations/index.erb
@@ -1,12 +1,16 @@
-<h1>Stations Index</h1>
+<h1 class="title">stations index</h1>
 
 <% @stations.each do |station| %>
-  <h3><a href="/stations/<%=station.id%>"><%= station.name %></a></h3>
-  <p><%= station.city %></p>
-  <form class="" action="/stations/<%= station.id %>/edit" method="GET">
-    <input type="submit" value="Edit">
-  </form>
-  <form action="/stations/<%= station.id %>" method="POST">
-    <input type="submit" name="_method" value="Delete" />
-  </form>
+  <section class="index-container">
+    <article class="index-item">
+      <h3><a href="/stations/<%=station.id%>"><%= station.name %></a></h3>
+      <p><%= station.city %></p>
+      <form class="" action="/stations/<%= station.id %>/edit" method="GET">
+        <input type="submit" value="Edit">
+      </form>
+      <form action="/stations/<%= station.id %>" method="POST">
+        <input type="submit" name="_method" value="Delete" />
+      </form>
+    </article>
+  </section>
 <% end %>
