add styling to trips index

--- a/app/views/trips/index.erb
+++ b/app/views/trips/index.erb
@@ -1,11 +1,15 @@
-<h1>Trips Index</h1>
+<h1 class="title">trips index</h1>
 
 <% @trips.each do |trip| %>
-  <h3><a href="/trips/<%=trip.id%>"><%= trip.id %></a></h3>
-  <p><%= trip.start_date %></p>
-  <form action="/trips/<%= trip.id %>" method="POST">
-    <input type="submit" name="_method" value="Delete" />
-  </form>
+  <section class="index-container">
+    <article class="index-item">
+      <h3><a href="/trips/<%=trip.id%>"><%= trip.id %></a></h3>
+      <p><%= trip.start_date %></p>
+      <form action="/trips/<%= trip.id %>" method="POST">
+        <input type="submit" name="_method" value="Delete" />
+      </form>
+    </article>
+  </section>
 <% end %>
 
 <%= will_paginate @trips %>
