add basic style for show pages

--- a/app/views/conditions/show.erb
+++ b/app/views/conditions/show.erb
@@ -1,12 +1,14 @@
 <a href='/conditions'>Back to All Trip Conditions</a>
-<h1>Viewing Weather for: <%=@condition.date%></h1>
-  <p>High Temperature: <%= @condition.max_temperature%></p>
-  <p>Mean Temperature: <%= @condition.mean_temperature%></p>
-  <p>Low Temperature: <%= @condition.min_temperature%></p>
-  <p>Mean Humidity: <%= @condition.mean_humidity %></p>
-  <p>Mean Visibility (in miles): <%= @condition.mean_visibility %></p>
-  <p>Mean Wind Speed (in mph): <%= @condition.mean_wind_speed %></p>
-  <p>Precipitation (in inches): <%= @condition.precipitation %></p>
+<h1 class="title">weather conditions for <%=@condition.date%></h1>
+  <main class="show">
+    <p>High Temperature: <%= @condition.max_temperature%></p>
+    <p>Mean Temperature: <%= @condition.mean_temperature%></p>
+    <p>Low Temperature: <%= @condition.min_temperature%></p>
+    <p>Mean Humidity: <%= @condition.mean_humidity %></p>
+    <p>Mean Visibility (in miles): <%= @condition.mean_visibility %></p>
+    <p>Mean Wind Speed (in mph): <%= @condition.mean_wind_speed %></p>
+    <p>Precipitation (in inches): <%= @condition.precipitation %></p>
+  </main>
   <form class="" action="/conditions/<%= @condition.id %>/edit" method="GET">
     <input type="submit" name="_method" value="Edit">
   </form>
