--- a/app/views/stations/show.erb
+++ b/app/views/stations/show.erb
@@ -1,16 +1,18 @@
 <a href='/stations'>Back to All Stations</a>
-<h1>Viewing Station: <%=@station.name%></h1>
-  <p>Dock Count: <%= @station.dock_count%></p>
-  <p>City: <%= @station.city%></p>
-  <p>Date Installed: <%= @station.installation_date%></p>
-  <p>Number of Rides Started Here: <%= @station.count_rides_started_at_station %></p>
-  <p>Number of Rides Ended Here: <%= @station.count_rides_ended_at_station %></p>
-  <p>Most Frequent Destination Station: <%= @station.most_frequent_destination %></p>
-  <p>Most Frequent Starting Station: <%= @station.most_frequent_origin %></p>
-  <p>Date with Most Trips Started Here: <%= @station.date_with_most_trips %></p>
-  <p>Most Frequent User Zip Code for this Station: <%= @station.most_frequent_starting_zip_code %></p>
-  <p>Most Popular Bike ID Starting Here: <%= @station.most_frequent_starting_bike %></p>
 
+<h1 class="title"><%=@station.name%></h1>
+  <main class="show"
+      <p>Dock Count: <%= @station.dock_count%></p>
+      <p>City: <%= @station.city%></p>
+      <p>Date Installed: <%= @station.installation_date%></p>
+      <p>Number of Rides Started Here: <%= @station.count_rides_started_at_station %></p>
+      <p>Number of Rides Ended Here: <%= @station.count_rides_ended_at_station %></p>
+      <p>Most Frequent Destination Station: <%= @station.most_frequent_destination %></p>
+      <p>Most Frequent Starting Station: <%= @station.most_frequent_origin %></p>
+      <p>Date with Most Trips Started Here: <%= @station.date_with_most_trips %></p>
+      <p>Most Frequent User Zip Code for this Station: <%= @station.most_frequent_starting_zip_code %></p>
+      <p>Most Popular Bike ID Starting Here: <%= @station.most_frequent_starting_bike %></p>
+  </main>
   <form class="" action="/stations/<%= @station.id %>/edit" method="GET">
     <input type="submit" name="_method" value="Edit">
   </form>
