--- a/app/views/conditions/new.erb
+++ b/app/views/conditions/new.erb
@@ -1,20 +1,22 @@
-<form action="/conditions" method="post">
-  <p>Enter new conditions for this day:</p>
-  <label>Date:</label>
-  <input type='text' name='condition[date]'/><br/><br/>
-  <label>High Temperature:</label>
-  <input type='text' name='condition[max_temperature]'/><br/><br/>
-  <label>Average Temperature:</label>
-  <input type='text' name='condition[mean_temperature]'/><br/><br/>
-  <label>Low Temperature:</label>
-  <input type='text' name='condition[min_temperature]'/><br/><br/>
-  <label>Mean Humidity:</label>
-  <input type='text' name='condition[mean_humidity]'/><br/><br/>
-  <label>Mean Visibility (in miles):</label>
-  <input type='text' name='condition[mean_visibility]'/><br/><br/>
-  <label>Mean Wind Speed (in mph):</label>
-  <input type='text' name='condition[mean_wind_speed]'/><br/><br/>
-  <label>Precipitation (in):</label>
-  <input type='text' name='condition[precipitation]'/><br/><br/>
-  <input type='submit' value='Create Conditions'/>
-</form>
+<main class="new-form">
+  <form action="/conditions" method="post">
+    <h1 class="title">weather conditions for your ride:</h1>
+    <label>Date:</label>
+    <input type='text' name='condition[date]'/><br/><br/>
+    <label>High Temperature:</label>
+    <input type='text' name='condition[max_temperature]'/><br/><br/>
+    <label>Average Temperature:</label>
+    <input type='text' name='condition[mean_temperature]'/><br/><br/>
+    <label>Low Temperature:</label>
+    <input type='text' name='condition[min_temperature]'/><br/><br/>
+    <label>Mean Humidity:</label>
+    <input type='text' name='condition[mean_humidity]'/><br/><br/>
+    <label>Mean Visibility (in miles):</label>
+    <input type='text' name='condition[mean_visibility]'/><br/><br/>
+    <label>Mean Wind Speed (in mph):</label>
+    <input type='text' name='condition[mean_wind_speed]'/><br/><br/>
+    <label>Precipitation (in):</label>
+    <input type='text' name='condition[precipitation]'/><br/><br/>
+    <input type='submit' value='Create Conditions'/>
+  </form>
+</main>
