--- a/app/views/conditions/index.erb
+++ b/app/views/conditions/index.erb
@@ -1,4 +1,4 @@
-<h1 class="title">weather conditions</h1>
+<h1 class="title">weather conditions index</h1>
 
 <% @conditions.each do |condition| %>
   <section class="index-container">
