--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -15,6 +15,7 @@ h1 {
   text-align: center;
   padding: 0;
   border: 20;
+  font-family: monospace;
 }
 
 ul.nav-bar {
@@ -87,4 +88,8 @@ img.main-img {
   width: 40%;
   height: auto;
   margin: auto;
+}
+
+.dashboard {
+  width: 80%;
 }
