--- a/app/views/stations/edit.erb
+++ b/app/views/stations/edit.erb
@@ -1,10 +1,12 @@
-<form action="/stations/<%=@station.id%>" method="POST">
-  <h1>Edit Station Details </h1>
-  Enter New Station Name: <input type='text' name='station[name]' value="<%=@station.name%>"/><br><br><br>
-  Enter New City: <input type='text' name='station[city]' value="<%=@station.city%>"/><br><br><br>
-  Enter New Dock Count: <input type='text' name='station[dock_count]'value="<%=@station.dock_count%>"/><br><br><br>
-  Enter New Installation Date: <input type='text' name='station[installation_date]' value="<%=@station.installation_date%>"/><br><br><br>
-  <input type="hidden" name="_method" value="PUT">
-  <input type='submit' value='Save Changes'/><br><br>
-  <a href="/stations/<%=@station.id%>">Back to Station</a>
-</form>
+<main class="edit">
+  <form action="/stations/<%=@station.id%>" method="POST">
+    <h1 class="title">change station details </h1>
+    Station Name: <input type='text' name='station[name]' value="<%=@station.name%>"/><br><br><br>
+    City: <input type='text' name='station[city]' value="<%=@station.city%>"/><br><br><br>
+    Dock Count: <input type='text' name='station[dock_count]'value="<%=@station.dock_count%>"/><br><br><br>
+    Installation Date: <input type='text' name='station[installation_date]' value="<%=@station.installation_date%>"/><br><br><br>
+    <input type="hidden" name="_method" value="PUT">
+    <input type='submit' value='Save Changes'/><br><br>
+    <a href="/stations/<%=@station.id%>">Back to Station</a>
+  </form>
+</main>
