--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -1,6 +1,7 @@
 body {
   padding: 0 0 0 0;
-  margin: 0 0 0 0;
+  margin: 30px 0 0 0;
+
 }
 
 main {
@@ -24,6 +25,9 @@ ul.nav-bar {
   padding: 0;
   overflow: hidden;
   background-color: #0FF1C3;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 li.nav-bar-item {
