--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,5 +1,5 @@
 <main>
-  <h1>bike share</h1>
+  <h1 class="title">bike share</h1>
 </main>
 
 <img class="main-img" src="/images/pexels-photo-248762.jpeg" alt="bike lane street logo">
