--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -2,4 +2,6 @@
   <h1 class="title">bike share</h1>
 </main>
 
-<img class="main-img" src="/images/pexels-photo-248762.jpeg" alt="bike lane street logo">
+<section>
+  <img class="main-img" src="/images/pexels-photo-248762.jpeg" alt="bike lane street logo">
+</section>
