--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,6 +11,7 @@
     <li class='nav-bar-item'><a href="/stations-dashboard">stations dashboard</a></li>
     <li class='nav-bar-item'><a href="/trips-dashboard">trips dashboard</a></li>
     <li class='nav-bar-item'><a href="/conditions-dashboard">weather dashboard</a></li>
+    <li class='nav-bar-item'><a href="/new-select">add a new...</a></li>
   </ul>
 
   <%= yield %>
