--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -106,11 +106,12 @@ section {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .new-select {
-  width: 25%;
-  height: 40%;
+  width: 300px;
+  height: 300px;
   margin: 25px;
   border: 2px solid;
   border-radius: 10px;
@@ -123,4 +124,19 @@ section {
 .img-link {
   width: 300px;
   height: auto;
+}
+
+
+@media (max-width: 1000px) {
+  .title{
+    margin-top: 105px;
+  }
+
+
+}
+
+@media (max-width: 550px) {
+  .title{
+    margin-top: 130px;
+  }
 }
