update title in /trips/show.erb

--- a/app/views/trips/show.erb
+++ b/app/views/trips/show.erb
@@ -1,5 +1,5 @@
 <main class="show">
-  <h1 class="title">trip ID: <%=@trip.id%></h1>
+  <h1 class="title">this trip: <%=@trip.id%></h1>
     <p>Duration in Minutes: <%= @trip.calculate_duration%></p>
     <p>Start Date: <%= @trip.start_date%></p>
     <p>Starting Station: <%= @trip.starting_station_name%></p>
